# okasaki

./: bench.html  flake.nix  hie.yaml  okasaki.cabal  scripts.nix
app/: Main.hs
src/: Chapter2.hs  Persistence.hs
