cabal-version: 2.2

name:           okasaki
version:        0.0.0.0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base

    -- Codecs
    , aeson
    , deriving-aeson
    , binary

    -- Parallelism
    , async

    -- Mutability
    , primitive

    -- Binary
    , bytestring
    , vector

    -- Containers
    , containers
    , unordered-containers

    -- Utilities
    , text
    , foldl
    , safe-exceptions

  default-language: Haskell2010


library
  import: common-opts
  exposed-modules:
      Core
  hs-source-dirs:
      src

executable okasaki
  import: common-opts
  main-is: Main.hs
  exposed-modules:
      Main
  hs-source-dirs:
      app
  build-depends: okasaki

test-suite test
  import: common-opts
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
    , okasaki
    , QuickCheck
    , hspec
    , hspec-expectations
    , hspec-discover
