cabal-version: 2.2

name:           okasaki
version:        0.0.0.0
build-type:     Simple

common common-opts
  default-extensions:
    TypeApplications
    ScopedTypeVariables
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >= 4.17.0.0
    , containers
    , unordered-containers

  default-language: Haskell2010


library
  import: common-opts
  exposed-modules:
      Persistence
  hs-source-dirs:
      src

executable okasaki
  import: common-opts
  main-is: Main.hs
  exposed-modules:
      Main
  hs-source-dirs:
      app
  build-depends: okasaki

test-suite test
  import: common-opts
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
    , okasaki
    , QuickCheck
    , hspec
    , hspec-expectations
    , hspec-discover
